style.css
* {
  margin: 0;
  padding: 0;
  /* border: 1px solid red; */
}
:root {
  --primary: #4935ff;
  --text-primary: #2f2f2f;
  --text-secondary: #3b3b3b;
  --text-tertiary: #adadad;
}

body {
  font-family: "Solway", serif;
  box-sizing: border-box;
  /* overflow-x: hidden; */
}

.container {
  position: relative;
  display: flex;
  width: 100%;
  min-height: 100vh;
}

/* navber */
.navbar {
  display: block;
  width: 60px;
  background-color: #fff;
}

.navigation {
  display: flex;
  align-items: center;
  flex-direction: column;
  position: relative;
  height: 100%;
}
.nav-heading {
  margin-top: 0.5rem;
}
.nav-heading,
.nav-list {
  display: flex;
  flex-direction: column;
  /* flex-direction: row; */
  align-items: center;
  justify-content: center;
}

.logo {
  transform: translateX(-5px);
  width: 32px;
  height: 32px;
  margin-bottom: 2rem;
}

.nav-list {
  margin-top: 2rem;
}

.nav-items,
.bell-icon {
  color: var(--text-tertiary);
  margin-bottom: 2rem;
  fill: #bfbfbf;
  font-size: 20px;
  transition: background-color 0.2s, padding 0.2s, border-radius 0.2s,
    color 0.2s, box-shadow 0.2s;
}

.nav-items:hover {
  color: #6b6b6b;
}

i.modile-search {
  display: none;
}

.active {
  background-color: var(--primary);
  padding: 0.5rem;
  border-radius: 5px;
  color: white !important;
  box-shadow: 0 0 10px 2px #4935ff96;
}

.nav-footer {
  position: absolute;
  bottom: 0;
  display: flex;
  flex-direction: column;
}

.bell-icon {
  position: relative;
}

.bell-notification {
  content: "";
  position: absolute;
  top: -5px;
  right: 0;
  width: 7px;
  height: 7px;
  border-radius: 50%;
  background-color: #85afff;
}

.footer-items:nth-child(1) {
  margin-bottom: 1.5rem;
}

/* profile */
.profile-container {
  width: 20%;
  background-color: #fafafa;
}

/* income */
.income-container {
  display: block;
  width: calc(60% - 60px);
  background-color: #fff;
  padding: 1rem;
}

/* strategy */
.strategy-container {
  display: block;
  width: 20%;
  background-color: #fff;
}

/* profile */

.profile-container {
  padding-top: 2.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.profile-image {
  width: 60px;
  height: 60px;
  border-radius: 50%;
  margin-right: 1rem;
  box-shadow: -2px 2px 10px 0.25px rgba(0, 0, 0, 0.342);
}

.profile-image-name-container {
  display: flex;
  align-items: center;
}

.profile-name {
  font-weight: 500;
  font-size: 20px;
  color: var(--text-primary);
}

.welcome-back-text {
  font-family: "Roboto", sans-serif;
  color: var(--text-primary);
  font-size: 12px;
  padding-top: 0.25rem;
}

.balance-container {
  margin-top: 3.5rem;
}

.today-text {
  margin-bottom: 1.2rem;
}

.contribution-amount .small-amount {
  margin: 1rem 0;
}

.sub-heading {
  font-size: 14px;
  color: var(--text-secondary);
  font-weight: 900;
}

.sub-heading-big {
  font-size: 18px;
  font-weight: 600;
}

.balance-amount {
  font-size: 24px;
  color: var(--text-primary);
  font-weight: 600;
  margin-top: 1rem;
}

.small-heading {
  font-size: 12px;
  color: var(--text-tertiary);
  margin-top: 0.3rem;
  /* white-space: nowrap; */
}

.small-amount {
  font-weight: 600;
  font-size: 15px;
  margin-top: 1rem;
}

.primary-button {
  outline: none;
  border: none;
  background-color: var(--primary);
  color: #fafaface;
  padding: 0.6rem 1.4rem;
  margin-top: 1rem;
  border-radius: 7px;
  font-size: 12px;
  max-width: 200px;
  transition: background-color 0.2s;
  font-family: "Roboto", "san-serif";
}

.primary-button:hover {
  background-color: #3d2cdb;
}

.primary-button i {
  padding-left: 0.5rem;
}

.recent-transaction-heading {
  margin-bottom: 1.5rem;
}

.recent-transactions-container {
  margin-top: 3.5rem;
}

.details-text {
  font-family: "Roboto", sans-serif;
  color: var(--text-secondary);
  font-size: 12px;
  padding-top: 0.25rem;
  font-weight: 600;
  padding-top: 0.5rem;
}

.withdraw-details {
  /* margin-bottom: 1.5rem; */
}

.transactions-hr {
  margin: 1.2rem 0;
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: #e6e4e4;
  width: 80%;
}

/* income */

.income-details-container-outer {
  display: flex;
}

.income-container {
  padding-top: 2.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;

  /* padding-top: 2.5rem;
  padding-bottom: 2.5rem;
  display: flex;
  flex-direction: column;
  align-items: center; */
}

.income-container-inner {
  width: 80%;
}

.retierment-income-heading {
  font-size: 12px;
  color: var(--primary);
  font-weight: 500;
}

.year {
  margin-top: 0.5rem;
  margin-bottom: 1rem;
  font-size: 18px;
  font-weight: 450;
  color: var(--text-primary);
}

.income-details-container {
  margin-top: 2rem;
  width: 30%;
}

.amount {
  font-size: 24px;
  font-weight: 600;
  color: var(--text-primary);
}

.income-details-container hr {
  border-top: none;
  border-left: none;
  border-right: none;
  border-color: var(--primary);
  padding-top: 0.75rem;
  width: 80%;
}

.contributions-container {
  margin-top: 5rem;
}

.peers-container {
  margin-top: 1rem;
}

.peers-container-inner {
  display: flex;
}

.peers-hr {
  border-color: var(--text-tertiary);
  opacity: 0.2;
  margin: 0.75rem 0;
}

.graph-container {
  margin-top: 1rem;
  margin-bottom: 2rem;
  /* width: 80%; */
  height: 500px;
  background-color: rgb(163, 153, 153);
}

.peers-details-container {
  /* margin-top: 2rem; */
  width: 25%;
  margin-top: 2rem;
}

.peers-details {
}

.sans-serif-details {
  font-family: "Roboto", sans-serif;
  font-size: 12px;
  color: var(--text-primary);
}

.sans-serif-details span {
  font-weight: 700;
}

/* strategy */

.strategy-container {
  justify-content: center;
  display: flex;
  margin-top: 2.5rem;
  margin-bottom: 2.5rem;
}

.strategy-uppper-conntainer {
  background-color: #fafafa;
  padding: 1rem;
  padding-top: 2rem;
  margin: 1rem;
  border-radius: 30px;
}

.strategy-heading {
  font-weight: 600;
  color: var(--text-primary);
  font-size: 18px;
  margin-bottom: 1.5rem;
}
/* ... */

